sumo/tests/sumo/spec/flow/errors/period_no_end/errors.sumo.meso
Error: At most one of 'period' and 'vehsPerHour' has to be given in the definition of flow 'f1'.
Quitting (on error).
